refs #1945 Avoid wrap link text

--- a/src/App.scss
+++ b/src/App.scss
@@ -36,10 +36,9 @@
 
 .compose-exiting,
 .compose-entering {
-  animation: .3s linear;
+  animation: 0.3s linear;
   animation-fill-mode: forwards;
 }
-
 
 .compose-exiting {
   animation-name: slideOutCompose;
@@ -48,7 +47,6 @@
 .compose-entering {
   animation-name: slideInCompose;
 }
-
 
 .compose-entered {
   width: 320px;
@@ -94,10 +92,9 @@
   }
 }
 
-
 .detail-exiting,
 .detail-entering {
-  animation: .3s liner;
+  animation: 0.3s liner;
   animation-fill-mode: forwards;
 }
 
@@ -118,7 +115,6 @@
 .detail-exited {
   width: 0;
 }
-
 
 .emojione {
   width: 1rem;
@@ -210,6 +206,14 @@
     color: #9baec8;
     margin: 0;
   }
+
+  a {
+    display: inline-block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 100%;
+  }
 }
 
 .status-detail {
@@ -255,7 +259,6 @@
     border-radius: 4px !important;
     background-color: transparent;
   }
-
 }
 
 .timeline-scrollable {
